fix: update hover background color for icon-button for better visibility

--- a/src/global/common.css
+++ b/src/global/common.css
@@ -13,7 +13,7 @@ h1 {
     transition: background-color 0.3s ease-in-out;
   }
   .icon-button:hover {
-    background-color: #ffffff33;
+    background-color: #ffffff28;
   }
   h1 {
     font-size: 3rem;
